DBZ-8842 update JDK_JAVA_OPTIONS for cassandra 4.1.x